--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -97,9 +97,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/header_container"
-                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_20"
-                android:layout_marginBottom="@dimen/margin_20">
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:id="@+id/likes_container"
@@ -114,17 +114,17 @@
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:backgroundTint="@color/white"
-                        android:background="@drawable/ic_like" />
+                        android:background="@drawable/ic_like"
+                        android:backgroundTint="@color/white" />
 
                     <ImageView
                         android:id="@+id/likes_icon_liked"
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:backgroundTint="@color/colorAccent"
                         android:background="@drawable/ic_like"
-                        android:visibility="gone"/>
+                        android:backgroundTint="@color/colorAccent"
+                        android:visibility="gone" />
 
 
                     <TextView
@@ -132,7 +132,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="10"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -148,8 +148,8 @@
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:backgroundTint="@color/white"
-                        android:background="@drawable/ic_pin" />
+                        android:background="@drawable/ic_pin"
+                        android:backgroundTint="@color/white" />
 
 
                     <TextView
@@ -173,8 +173,8 @@
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:backgroundTint="@color/white"
-                        android:background="@drawable/ic_share" />
+                        android:background="@drawable/ic_share"
+                        android:backgroundTint="@color/white" />
 
 
                     <TextView
@@ -198,8 +198,8 @@
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:layout_marginEnd="5dp"
-                        android:backgroundTint="@color/white"
-                        android:background="@drawable/ic_comment" />
+                        android:background="@drawable/ic_comment"
+                        android:backgroundTint="@color/white" />
 
 
                     <TextView
@@ -209,6 +209,34 @@
                         android:text="20"
                         android:textColor="@color/white" />
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/share_buttons_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/header_container"
+                android:layout_marginEnd="35dp"
+                android:background="@drawable/chat_bubble"
+                android:backgroundTint="@color/white"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/share_facebook"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="@dimen/margin_5"
+                    android:src="@drawable/ic_share_facebook" />
+
+                <ImageView
+                    android:id="@+id/share_twitter"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_margin="@dimen/margin_5"
+                    android:src="@drawable/ic_shate_twitter" />
 
             </LinearLayout>
 
@@ -234,13 +262,99 @@
                 android:layout_below="@id/content_text"
                 android:background="@color/green_dark_2" />
 
+            <LinearLayout
+                android:id="@+id/tutorial_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/bottom_horizontal_split_line"
+                android:layout_marginBottom="-20dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tutorial_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_10"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/green_dark_2" />
+
+                <TextView
+                    android:id="@+id/tutorial_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_15"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/commnets_wall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@id/bottom_horizontal_split_line"
+                android:layout_below="@id/tutorial_container"
                 android:layout_marginTop="@dimen/margin_20" />
+
+            <LinearLayout
+                android:id="@+id/tutorial_container_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/commnets_wall"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tutorial_bottom_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_15"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="160dp"
+                        android:layout_height="90dp"
+                        android:layout_below="@+id/coin_image"
+                        android:layout_marginTop="-10dp"
+                        android:background="@color/green_dark_2_semitransparent">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentBottom="true"
+                            android:layout_margin="10dp"
+                            android:text="Tap here to earn 5 SSK for viewing this How to!"
+                            android:textAlignment="center"
+                            android:textColor="@color/white" />
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:id="@+id/coin_image"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginStart="@dimen/margin_10"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/tutorial_coins" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
         </RelativeLayout>
     </ScrollView>
 
