--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -309,7 +309,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/commnets_wall"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginBottom="@dimen/margin_20">
 
                 <TextView
                     android:id="@+id/tutorial_bottom_message"
