--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -193,7 +193,6 @@
         android:id="@+id/chat_friends_in_chat_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/margin_90"
         android:background="@color/green_dark_2"
         android:layout_above="@+id/confirm_button">
 
@@ -210,7 +209,9 @@
             android:id="@+id/chat_friends_in_chat_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/chat_friends_in_chat_headline">
+            android:layout_below="@id/chat_friends_in_chat_headline"
+            android:layout_marginBottom="@dimen/padding_16"
+            android:minHeight="@dimen/row_chat_bubble_user_size">
 
         </android.support.v7.widget.RecyclerView>
 
