--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -212,34 +212,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/share_buttons_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@id/header_container"
-                android:layout_marginEnd="35dp"
-                android:background="@drawable/chat_bubble"
-                android:backgroundTint="@color/white"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <ImageView
-                    android:id="@+id/share_facebook"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="@dimen/margin_5"
-                    android:src="@drawable/ic_share_facebook" />
-
-                <ImageView
-                    android:id="@+id/share_twitter"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_margin="@dimen/margin_5"
-                    android:src="@drawable/ic_shate_twitter" />
-
-            </LinearLayout>
-
             <View
                 android:id="@+id/top_horizontal_split_line"
                 android:layout_width="match_parent"
@@ -359,6 +331,39 @@
         </RelativeLayout>
     </ScrollView>
 
+    <RelativeLayout
+        android:id="@+id/test_share"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/demo_red_semitransparent"
+        android:visibility="gone">
+        <LinearLayout
+            android:id="@+id/share_buttons_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="35dp"
+            android:background="@drawable/chat_bubble"
+            android:backgroundTint="@color/white"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/share_facebook"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_margin="@dimen/margin_5"
+                android:src="@drawable/ic_share_facebook" />
+
+            <ImageView
+                android:id="@+id/share_twitter"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_margin="@dimen/margin_5"
+                android:src="@drawable/ic_shate_twitter" />
+
+        </LinearLayout>
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/post_container"
         android:layout_width="match_parent"
