--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -126,10 +126,11 @@
                 android:id="@+id/disabled_video_icon"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/disable_video_button"
-                android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@+id/preview_video_view"
-                app:layout_constraintDimensionRatio="1"
+                android:src="@drawable/video_disabled"
+                app:layout_constraintBottom_toTopOf="@+id/preview_user_name_text_view"
+                android:visibility="visible"
+                android:layout_centerInParent="true"
+                app:layout_constraintDimensionRatio="4.5"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -142,7 +143,7 @@
                 app:layout_constraintDimensionRatio="1.5"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/disabled_video_icon"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="spread" />
 
             <TextView
