--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/margin_5"
-        android:background="@drawable/chat_bubble_user">
+        android:background="@drawable/ic_chat_right">
 
         <TextView
             android:id="@+id/text"
