--- a/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
@@ -49,6 +49,7 @@
         android:background="@color/colorPrimarySemiLight">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Select friends to call"
@@ -62,6 +63,7 @@
             android:numColumns="auto_fit"
             android:clipToPadding="false"
             android:layout_height="match_parent"
+            android:layout_below="@id/title"
             android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginRight="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_15"/>
