--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -127,18 +127,14 @@
             android:layout_below="@+id/top_vertical_spliter"
             android:id="@+id/chat_join_search_button" />
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/chat_name_edit_text">
 
             <tv.sportssidekick.sportssidekick.util.ui.AutofitRecyclerView
+                android:layout_below="@+id/chat_name_edit_text"
                 android:id="@+id/friends_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+
 
         <tv.sportssidekick.sportssidekick.util.ui.AnimatedExpandableListView
             android:id="@+id/join_chat_search_result_list_view"
