--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -101,7 +101,9 @@
             android:layout_width="@dimen/create_chat_name_label_height"
             android:layout_height="@dimen/create_chat_name_label_height"
             android:layout_below="@+id/top_vertical_spliter"
+            android:background="@color/black_transparent_154"
             android:layout_alignParentStart="true"
+            android:visibility="gone"
             android:scaleType="fitXY"/>
 
     <EditText
