--- a/SportsSideKick/app/src/main/res/layout/row_friends_in_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_friends_in_chat.xml
@@ -6,16 +6,16 @@
 
     <RelativeLayout
         android:id="@+id/row_friends_in_chat_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_above="@+id/row_friends_in_chat_name"
         android:layout_alignParentTop="true">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/row_friends_in_chat_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:scaleType="centerCrop" />
 
         <View
@@ -64,6 +64,9 @@
         android:gravity="center"
         android:lines="1"
         android:maxLines="1"
-        android:padding="@dimen/padding_8"
+        android:paddingStart="@dimen/padding_8"
+        android:paddingEnd="@dimen/padding_8"
+        android:paddingBottom="@dimen/padding_8"
+
         android:textColor="@color/white" />
 </RelativeLayout>
