--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -57,6 +57,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/strap_and_title_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -328,42 +329,47 @@
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:id="@+id/share_buttons_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:animateLayoutChanges="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="35dp"
+                android:layout_below="@+id/header_container"
+                android:background="@drawable/share_bubble"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/share_facebook"
+                    android:layout_alignParentStart="true"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="@dimen/margin_30"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:layout_marginEnd="@dimen/margin_30"
+                    android:src="@drawable/ic_share_facebook" />
+
+                <ImageView
+                    android:id="@+id/share_twitter"
+                    android:layout_toEndOf="@+id/share_facebook"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginEnd="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:src="@drawable/ic_shate_twitter" />
+            </RelativeLayout>
+
         </RelativeLayout>
     </ScrollView>
 
-    <RelativeLayout
-        android:id="@+id/test_share"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/demo_red_semitransparent"
-        android:visibility="gone">
-        <LinearLayout
-            android:id="@+id/share_buttons_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="35dp"
-            android:background="@drawable/chat_bubble"
-            android:backgroundTint="@color/white"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/share_facebook"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="@dimen/margin_5"
-                android:src="@drawable/ic_share_facebook" />
 
-            <ImageView
-                android:id="@+id/share_twitter"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="@dimen/margin_5"
-                android:src="@drawable/ic_shate_twitter" />
 
-        </LinearLayout>
-    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/post_container"
         android:layout_width="match_parent"
@@ -377,17 +383,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_margin="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/uploaded_image"
             android:layout_toStartOf="@+id/post_post_button"
             android:backgroundTint="@color/colorPrimary"
-            android:hint="Write your post here."
+            android:hint="@string/enter_comment_hint"
             android:textColor="@color/white"
             android:textColorHint="@color/lightGrey" />
 
         <ImageView
             android:id="@+id/post_post_button"
-            android:layout_width="40dp"
+            android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
